--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -271,3 +271,7 @@ html {
     padding-right: 0px;
     padding-left: 0px;
 }
+
+.mat-vertical-stepper-header {
+    max-height: 200px !important;
+}
